# MetaMach

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml
blueprints/gatemetric/: janus.toml
blueprints/gatemetric/openwiki/: production_report.md
blueprints/joyrobots/: janus.toml
blueprints/joyrobots/openwiki/: README.md
configs/: agents.toml  global_rules.md  offboard.toml  tmux.conf
docs/: ADR.md  ARCH-0.2.0.md  ARCH-0.3.0.md  ARCH-0.4.0.md  ARCH.md  Absurd-Integration.md  Deployment-Spec.md  Feature-Spec.md  Herdr-Integration.md  M4-4.1-design.md  PRD.md  Project-Plan.md  Review-Spec.md  Test-Spec.md  herdr-v1-contract.md
docs/CH/: ARCH-review.md  ARCH.md  Deployment-Spec-Review.md  Deployment-Spec.md  Feature-Spec-Review.md  Feature-Spec.md  PRD-Review.md  PRD.md  Project-Plan-Review.md  Project-Plan.md  Review-Spec-Review.md  Review-Spec.md  Test-Spec-Review.md  Test-Spec.md
janus/: Cargo.toml  herdr-plugin.toml
janus/migrations/: 001_catalog.sql  001_init_absurd.sql  002_blueprint.sql  002_melt_blueprint_data.sql  003_hitl_verdict.sql  003_target_sha.sql
janus/sql/: ABSURD_VERSION  absurd.sql
janus/src/: agent.rs  coldstart.rs  lib.rs  lifecycle.rs  paths.rs  pipeline.rs  protocol.rs  recipe.rs  spawn.rs  uds.rs  workflow.rs
janus/src/absurd/: adapter.rs  fallback.rs  mod.rs  schema.rs
janus/src/cognitive/: mod.rs
janus/src/gateway/: mod.rs  teams.rs
janus/src/tether/: lifecycle.rs  mod.rs
janus/src/tmux/: lifecycle.rs  mod.rs
janus/src/tool_guard/: mod.rs  rules.rs  webhook.rs
janus/src/workflow/: filter.rs  mod.rs
janus/tests/: gateway.rs  onboard_lifecycle.rs  protocol_contract.rs  step_workflow.rs  tether.rs  tmux.rs  uds_contract.rs
workflows/: dev-flow.toml  firmware-deploy.toml
