[package]
name = "janus"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "MetaMach 1.0 Janus core: daemon, Herdr shadow client, proxy shell"
license = "MIT"
publish = false

# M3 adds the janus-sh proxy shell + tool_guard rule engine (Contracts 3.2/3.4/3.5).
# The shared library (src/lib.rs) backs all four binaries.

[[bin]]
name = "herdr-janus"
path = "src/bin/herdr_janus.rs"

[[bin]]
name = "janus-daemon"
path = "src/bin/janus_daemon.rs"

[[bin]]
name = "janus"
path = "src/bin/janus.rs"

[[bin]]
name = "janus-sh"
path = "src/bin/janus_sh.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "json", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# M3: Tool Guard rule engine + proxy shell
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
# Durable factory binaries: favor fast startup and small size.
lto = true
codegen-units = 1
strip = true
